RESOLVED FIXED107500
CSSSelector::value() should assert that m_match != Tag.
https://bugs.webkit.org/show_bug.cgi?id=107500
Summary CSSSelector::value() should assert that m_match != Tag.
Andreas Kling
Reported 2013-01-21 21:34:15 PST
If it isn't, bad castery will follow.
Attachments
Patch (2.28 KB, patch)
2013-01-21 21:35 PST, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-01-21 21:35:09 PST
WebKit Review Bot
Comment 2 2013-01-21 22:03:32 PST
Comment on attachment 183884 [details] Patch Clearing flags on attachment: 183884 Committed r140383: <http://trac.webkit.org/changeset/140383>
WebKit Review Bot
Comment 3 2013-01-21 22:03:38 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.