CSSSelector::value() should assert that m_match != Tag. <http://webkit.org/b/107500>

Reviewed by Anders Carlsson.

Add an assertion to catch anyone trying to extract a value() from a Tag selector.

* css/CSSSelector.h:
(CSSSelector):
(WebCore::CSSSelector::value):


Canonical link: https://commits.webkit.org/125732@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140383 268f45cc-cd09-0410-ab3c-d52691b4dbfc